src/objects/Apttus_Config2__LineItemRollup__c.object
<CustomObject>
    <description>Holds rollup summary custom fields</description>
    <fields>
        <fullName>Apttus_Config2__AppliedExpressionInfoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Expression Info</label>
        <referenceTo>Apttus_Config2__AppliedExpressionInfo__c</referenceTo>
        <relationshipLabel>Line Item Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Lineitem Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Line Item Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupedByDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grouped By Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupedByField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grouped By Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Lineitem Rollups</relationshipLabel>
        <relationshipName>LineItemRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalQuantity__c</fullName>
        <description>Holds total line item quantity resulting from rollup expression.</description>
        <inlineHelpText>Holds total line item quantity resulting from rollup expression.</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseOptionGroupRollup__c</fullName>
        <description>100BaseOptionGroupRollup</description>
        <label>BaseOptionGroupRollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Ref_Care_Price_Sum__c</fullName>
        <label>Data Ref Care Price Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FBA_NAR_GPON_OPTICS__c</fullName>
        <label>FBA NAR GPON OPTICS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBA_NT_FANT_Sum__c</fullName>
        <label>FBA NT FANT Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBA_ONT_QUANTITY__c</fullName>
        <label>FBA ONT QUANTITY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBA_Shelves_Sum__c</fullName>
        <label>FBA Shelves Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fastermind_Care_Price_Sum__c</fullName>
        <label>Fastermind Care Price Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LP_Option_QuoteRollup__c</fullName>
        <label>LP Option QuoteRollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LP_Product_QuoteRollup__c</fullName>
        <description>License point&apos;s quote rollup for product</description>
        <label>LP Product QuoteRollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONT_Quantity__c</fullName>
        <label>ONT Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2P_FELT_Board__c</fullName>
        <label>P2P FELT Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2P_NELT_Board__c</fullName>
        <label>P2P NELT Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLNAR__c</fullName>
        <label>SumPOLNARAdditional LT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POL_ONT_Multiplier_1__c</fullName>
        <label>POL_ONT_Multiplier_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POL_ONT_Multiplier_4__c</fullName>
        <label>POL ONT Multiplier 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POL_ONT_Multiplier_8__c</fullName>
        <label>POL ONT Multiplier 8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_CSFP_FELTB__c</fullName>
        <label>Rollup CSFP FELTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_FGLTB__c</fullName>
        <label>Rollup FGLTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_NELTB__c</fullName>
        <label>Rollup NELTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_SFPPLUS_FELTB__c</fullName>
        <label>Rollup SFP+ FELTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_SFP_FELTB__c</fullName>
        <label>Rollup SFP FELTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_of_GPON_Ports_POL__c</fullName>
        <label>Rollup of GPON Ports POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_of_LT_Cards_FBANAR__c</fullName>
        <label>Rollup of LT Cards FBANAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPS_3HZ16081AAAA_CE__c</fullName>
        <label>SPS 3HZ16081AAAA sum CE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPS_3HZ16081AAAA_Policy__c</fullName>
        <label>SPS 3HZ16081AAAA sum Policy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPS_3HZ16081AAAA_sum__c</fullName>
        <label>SPS 3HZ16081AAAA sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRS_Price_Rollup__c</fullName>
        <description>Impact SRS Rollup for AB RTU products</description>
        <label>SRS Price Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPOLNARAdditional_Network_Uplinks__c</fullName>
        <label>SUMPOLNARAdditional Network Uplinks</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100GE_CFP4_Optics_Modules__c</fullName>
        <label>Sum product of the 100GE CFP4 Optics Mod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100GE_CFP_Optics_Modules__c</fullName>
        <label>Sum product of the 100GE CFP Optics Modu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100GE_Optics_CFP2_Modules__c</fullName>
        <label>Sum product of the 100GE CFP2 Optics Mod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100G_CFP2__c</fullName>
        <label>Sum Prod of 100GE CFP2 Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100G_CFP4__c</fullName>
        <label>Sum Prod of 100GE CFP4 Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100G_CFP__c</fullName>
        <label>Sum Prod of 100GE CFP Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_100_1000BaseEthernet__c</fullName>
        <label>Sum product of 100 1000 Base Ethernet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10G_BX__c</fullName>
        <label>Sum Prod of 10GE-X Bi-directional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10G_CDWM40KM__c</fullName>
        <label>Sum Prod of 10GE CDWM 40 km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10G_CDWM70KM__c</fullName>
        <label>Sum Prod of CWDM 70 km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10G_R_HT__c</fullName>
        <label>Sum Prod of 10GE-R High temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10G_R__c</fullName>
        <label>Sum Prod of 10GE-R normal temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_10GigE_Optics_Modules__c</fullName>
        <label>Sum product of the 10GE SFP+ Optics Modu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1GE_OpticsModules__c</fullName>
        <label>Sum product of 1GE SPP Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_BASEX__c</fullName>
        <label>Sum Prod of 1000BASE-X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_BASE_T__c</fullName>
        <label>Sum Prod of 1000BASE-T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_BX__c</fullName>
        <label>Sum Prod of 1000BASE-X Bi-directional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_CWDM40KM__c</fullName>
        <label>Sum Prod of 1GE CWDM 40km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_CWDM80KM__c</fullName>
        <label>Sum Prod of CWDM 80km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_CWDM_HT__c</fullName>
        <label>Sum Prod of CWDM 80 km with High tempera</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_DualRate__c</fullName>
        <label>Sum Prod of 1000BASE dual Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_T__c</fullName>
        <label>Sum Prod of 1GIGE BASE-T RJ45 Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1G_cSFP__c</fullName>
        <label>Sum Prod of 1GigE cSFP Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_1GigE_Optics_Modules__c</fullName>
        <label>Sum product of the 1GE SPF Optics Module</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_40GEQSFP_Optics_Modules__c</fullName>
        <label>Sum product of the 40GE QSFP Optics Modu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_40G__c</fullName>
        <label>Sum Prod of 40GE QSFP Optics Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUMPROD_Compact_1GigE_Optics_Modules__c</fullName>
        <label>Sum product of the 1GE Compact  SFP Opti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUM_PROD_1GIGE_BASE_T_RJ45_Modules__c</fullName>
        <label>Sum product of the 1GE Base TX RJ45 Modu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_1000BASE_X_Bi_Directional_40Km__c</fullName>
        <description>Sum of option group 1000BASE-X Bi-Directional 40Km</description>
        <inlineHelpText>Sum of option group 1000BASE-X Bi-Directional 40Km</inlineHelpText>
        <label>Sum of 1000BASE-X Bi-Directional 40Km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_1000BASE_X_Bi_Directional_High_Te__c</fullName>
        <description>To hold sum of quantity of Option group 1000BASE-X Bi-Directional High Temperature 10Km</description>
        <inlineHelpText>To hold sum of quantity of Option group 1000BASE-X Bi-Directional High Temperature 10Km</inlineHelpText>
        <label>Sum of 1000BASE-X Bi-Directional High Te</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_1000BASE_X__c</fullName>
        <description>To hold the rollup of quantity of options of 1000BASE-X Option group</description>
        <inlineHelpText>To hold the rollup of quantity of options of 1000BASE-X Option group</inlineHelpText>
        <label>Sum of 1000BASE-X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_16Port_POL__c</fullName>
        <label>Sum of 16Port POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_8Port_16Port_POL__c</fullName>
        <label>Sum of 8Port 16Port POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_8Port_POL__c</fullName>
        <label>Sum of 8Port POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_CDWM_40km__c</fullName>
        <description>Sum of Option Group CDWM 40km</description>
        <inlineHelpText>Sum of Option Group CDWM 40km</inlineHelpText>
        <label>Sum of CDWM 40km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_CDWM_80km__c</fullName>
        <description>Sum of Option Group CDWM 80km</description>
        <inlineHelpText>Sum of Option Group CDWM 80km</inlineHelpText>
        <label>Sum of CDWM 80km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_CDWM_High_Temperature_120km__c</fullName>
        <description>Sum of Option group CDWM High Temperature 120km</description>
        <inlineHelpText>Sum of Option group CDWM High Temperature 120km</inlineHelpText>
        <label>Sum of CDWM High Temperature 120km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Data_Ref_bundle__c</fullName>
        <label>Sum of Data Ref bundle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_FRM_bundle__c</fullName>
        <label>Sum of FRM bundle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Fx4_POL__c</fullName>
        <label>Sum of Fx4 POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Fx8_POL__c</fullName>
        <label>Sum of Fx8 POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_ONT_Selection_POL__c</fullName>
        <label>Sum of ONT Selection POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_SFPPLUS_optics_SAR8__c</fullName>
        <label>Sum of SFPPLUS optics SAR8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_SFP_optics_SAR_8__c</fullName>
        <description>Calculation Field SFP SAR8</description>
        <label>Sum of SFP optics SAR-8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_SFPs_POL__c</fullName>
        <label>Sum of SFPs POL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_XFPs_optics_SAR_8__c</fullName>
        <description>Calculation Field XFPs SAR8</description>
        <label>Sum of XFPs optics SAR-8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_Wx_optics_sum__c</fullName>
        <label>W/Wx optics sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SASMXP_Sum_of_SFP__c</fullName>
        <label>7210 SASMXP Sum of SFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_IMM_SUM__c</fullName>
        <label>7210 SAS-R IMM SUM</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_SUM_CFP4__c</fullName>
        <label>7210 SAS-R SUM CFP4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_SUM_QSFP28__c</fullName>
        <label>7210 SAS-R SUM QSFP28</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_SUM_SFP2__c</fullName>
        <label>7210 SAS-R SUM SFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_SUM_SFP__c</fullName>
        <label>7210 SAS-R SUM SFP+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_R_SUM_cSFP__c</fullName>
        <label>7210 SAS-R SUM cSFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_T_SFP_Sum__c</fullName>
        <label>7210 SAS-T SFP Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_T_STD_Temp_Sum__c</fullName>
        <label>7210 SAS-T STD Temp Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7210_SAS_T_XFP_Sum__c</fullName>
        <label>7210 SAS-T XFP Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7362_DF_GPON_XFPs_Sum__c</fullName>
        <label>7362 DF GPON XFPs Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7362_DF_Uplinks_Sum__c</fullName>
        <label>7362 DF Uplinks Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_100_base__c</fullName>
        <label>7705 100 base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_A_Ax_Optics__c</fullName>
        <label>7705 SAR-A_Ax Optics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_A_Sum_of_SFP__c</fullName>
        <label>7705 SAR-A Sum of SFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_H_GPS_RECEIVER_MODULE__c</fullName>
        <label>7705 SAR-H GPS RECEIVER MODULE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_H_GPS_SUM__c</fullName>
        <label>7705 SAR-H GPS SUM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_H_LineCards_SUM__c</fullName>
        <label>7705 SAR-H LineCards SUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_H_Module_SUM__c</fullName>
        <label>7705 SAR-H Module SUM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_H_SFPs_SUM__c</fullName>
        <label>7705 SAR-H SFPs SUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7705_SAR_HcSFMSUM__c</fullName>
        <label>7705 SAR-HcSFMSUM</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_CFP2__c</fullName>
        <label>7750 sra4/8 Sum Of CFP2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_CFP__c</fullName>
        <label>7750 sra4/8 Sum Of CFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_Qsfp__c</fullName>
        <label>7750 sra4/8 Sum Of Qsfp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_SFP_Plus__c</fullName>
        <label>7750 sra4/8 Sum Of SFP+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_SFP__c</fullName>
        <label>7750 sra4/8 Sum Of SFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7750_sra4_8_Sum_Of_csfp__c</fullName>
        <label>7750 sra4/8 Sum Of csfp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item Rollup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Item Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>